@@ -11,7 +11,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -35,7 +34,7 @@ public class CityServiceImpl implements CityService {
         List<City> cities = cityRepository.findAll();
         return cities.stream()
                 .map(city -> modelMapper.map(city, CityDto.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -61,14 +60,14 @@ public class CityServiceImpl implements CityService {
 
     @Override
     public void updateCity(Long id, CityDto cityDto) {
-        cityRepository.findById(id)
-                .orElseThrow(() -> {
-                    log.error(ID_NOT_FOUND + id, new EntityNotFoundException(ID_NOT_FOUND + id));
-                    throw new EntityNotFoundException(ID_NOT_FOUND + id);
-                });
+        cityRepository.findById(id).ifPresentOrElse(cityFind -> {
         City cityToUpdate = modelMapper.map(cityDto, City.class);
         cityToUpdate.setId(id);
         cityRepository.save(cityToUpdate);
         log.info(String.format("City %s updated successfully", cityToUpdate.getName()));
+        }, () -> {
+            log.error(ID_NOT_FOUND + id, new EntityNotFoundException(ID_NOT_FOUND + id));
+            throw new EntityNotFoundException(ID_NOT_FOUND + id);
+        });
     }
 }
